--- a/style.css
+++ b/style.css
@@ -47,3 +47,7 @@
       bottom: 0;
       width: 327px;
     }
+{
+          background-image: url(https://i.gifer.com/origin/e6/e64a872e65441976732595040148d268_w200.webp);
+
+}
